--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -2,20 +2,21 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 
-<body class="container  body-content">
-<h1 th:text="${'Job: ' + job.name}">Default Title</h1>
+<body class="container body-content">
+<h1 th:text="${job != null ? 'Job: ' + job.name : 'Default Title'}">Default Title</h1>
 
 <nav th:replace="fragments :: page-header"></nav>
 
 <div class="job-listing">
-    <p th:text="${'ID: ' + job.id}"></p>
-    <p th:text="${'Name: ' + job.name}"></p>
+    <p th:text="${job != null ? 'ID: ' + job.id : ''}"></p>
+    <p th:text="${job != null ? 'Name: ' + job.name : ''}"></p>
     <p>
-        Employer: <a th:href="@{'/employers/view/' + ${job.employer.id}}" th:text="${job.employer.name}"></a>
+        Employer: <a th:href="@{'/employers/view/' + ${job != null ? job.employer.id : ''}}" th:text="${job != null ? job.employer.name : ''}"></a>
     </p>
     <p> Skills:
         <ul>
-            <li th:each="skill : ${job.skills}">
+            <li th:each="skill : ${job != null ? job.skills : ''}">
+
                 <a th:href="@{'/skills/view/' + ${skill.id}}" th:text="${skill.name}"></a>
             </li>
         </ul>
