--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+<header>
 <div th:fragment="page-header" class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -23,10 +23,11 @@
                 <li><a th:href="@{/list}">List</a></li>
                 <li><a th:href="@{/search}">Search</a></li>
                 <li><a th:href="@{/add}">Add Jobs</a></li>
+                <li><a th:href="@{/logout}">Logout</a></li>
             </ul>
         </div>
     </div>
 </div>
-
+</header>
 </body>
 </html>
